rnsc/test_data/integration/error/parser/type_hints/int/not_i32_recovers.rns
.class @int "not an int"
unexpected_token ; <- this error should be reported as well